--- a/app/src/main/res/layout/add_dividend.xml
+++ b/app/src/main/res/layout/add_dividend.xml
@@ -4,97 +4,109 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
     >
 
-  <TextView
-      android:id="@+id/addUpdateDividendHeadline"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_gravity="center_horizontal"
-      style="@style/section_header"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      />
-
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_gravity="center_vertical"
-      android:text="@string/number_of_shares"
-      app:layout_constraintBottom_toBottomOf="@+id/textInputLayout1"
-      app:layout_constraintEnd_toStartOf="@+id/guideline1"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/addUpdateSharesHeadline"
-      />
-  <com.google.android.material.textfield.TextInputLayout
-      android:id="@+id/textInputLayout1"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_margin="8dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/guideline1"
-      app:layout_constraintTop_toBottomOf="@+id/addUpdateDividendHeadline"
-      app:endIconMode="clear_text"
+  <androidx.core.widget.NestedScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:scrollbars="vertical"
       >
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/addShares"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/design_default_color_background"
-        android:digits="0123456789.,"
-        android:gravity="end"
-        android:imeOptions="actionDone"
-        android:inputType="numberDecimal"
-        android:maxLength="9"
-        android:maxLines="1"
-        android:nextFocusDown="@+id/price"
-        android:nextFocusForward="@+id/price"
-        android:textAlignment="textEnd"
-        />
-  </com.google.android.material.textfield.TextInputLayout>
 
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_gravity="center_vertical"
-      android:text="@string/price"
-      app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
-      app:layout_constraintEnd_toStartOf="@+id/guideline1"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
-      />
-  <com.google.android.material.textfield.TextInputLayout
-      android:id="@+id/textInputLayout2"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_margin="8dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="@+id/guideline1"
-      app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
-      app:endIconMode="clear_text"
-      >
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/addPrice"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/design_default_color_background"
-        android:digits="0123456789.,"
-        android:gravity="end"
-        android:imeOptions="actionDone"
-        android:inputType="numberDecimal"
-        android:maxLength="9"
-        android:maxLines="1"
-        android:textAlignment="textEnd"
-        />
-  </com.google.android.material.textfield.TextInputLayout>
+        android:padding="8dp"
+        >
 
-  <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/guideline1"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:orientation="vertical"
-      />
+    <TextView
+            android:id="@+id/addUpdateDividendHeadline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            style="@style/section_header"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/textViewDividendAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/dividend_amount"
+            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addUpdateDividendHeadline"
+            />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayout1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textViewDividendAmount"
+            app:layout_constraintTop_toBottomOf="@+id/addUpdateDividendHeadline"
+            >
+          <com.google.android.material.textfield.TextInputEditText
+              android:id="@+id/addDividend"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@color/design_default_color_background"
+              android:digits="0123456789.,"
+              android:gravity="end"
+              android:imeOptions="actionDone"
+              android:inputType="numberDecimal"
+              android:maxLength="9"
+              android:maxLines="1"
+              android:textAlignment="textEnd"
+              />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/textViewDividendExDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="16dp"
+            android:text="@string/dividend_exdate"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
+            />
+        <DatePicker
+            android:id="@+id/datePickerDividendExDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:datePickerMode="calendar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewDividendExDate"
+            />
+
+        <TextView
+            android:id="@+id/textViewDividendDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="16dp"
+            android:text="@string/dividend_date"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/datePickerDividendExDate"
+            />
+        <DatePicker
+            android:id="@+id/datePickerDividendDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:datePickerMode="calendar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewDividendDate"
+            />
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
