--- a/app/src/main/res/layout/add_note.xml
+++ b/app/src/main/res/layout/add_note.xml
@@ -15,7 +15,6 @@
       >
 
     <TextView
-        android:id="@+id/addUpdateSharesHeadline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -30,7 +29,7 @@
         app:endIconMode="clear_text"
         >
     <com.google.android.material.textfield.TextInputEditText
-          android:id="@+id/textInputEditEventNote"
+          android:id="@+id/textInputEditNote"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="textMultiLine"
